# govnolib

./: CMakeLists.txt
.github/workflows/: build.yml
src/: govno.cpp  govno.h
test_package/: CMakeLists.txt
test_package/src/: main.cpp
